Install dotnet 9 in workflow

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@master
 
+      - name: Install dotnet 9
+        uses: actions/setup-dotnet@v4
+        with:
+            dotnet-version: '9.0.0'
+
       - name: Install dependencies
         run: dotnet restore
 
@@ -26,6 +31,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
           
+      - name: Install dotnet 9
+        uses: actions/setup-dotnet@v4
+        with:
+            dotnet-version: '9.0.0'
+
       - name: Install dependencies
         run: dotnet restore
 
