--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dotnet 9
         uses: actions/setup-dotnet@v4
         with:
-            dotnet-version: '9.0.0'
+            dotnet-version: '9.0.x'
 
       - name: Install dependencies
         run: dotnet restore
@@ -34,7 +34,7 @@ jobs:
       - name: Install dotnet 9
         uses: actions/setup-dotnet@v4
         with:
-            dotnet-version: '9.0.0'
+            dotnet-version: '9.0.x'
 
       - name: Install dependencies
         run: dotnet restore
