--- a/SudokuSolver/SudokuSolver.csproj
+++ b/SudokuSolver/SudokuSolver.csproj
@@ -8,7 +8,7 @@
   <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	  <IsPackable>true</IsPackable>
 	  <PackAsTool>true</PackAsTool>
-	  <ToolCommandName>sodukusolver</ToolCommandName>
+	  <ToolCommandName>sudokusolver</ToolCommandName>
 	  <Title>SudokuSolver</Title>
 	  <Authors>Kristian Skov Johansen</Authors>
 	  <Description>A small project about making automatic soduko solvers.</Description>
@@ -22,7 +22,7 @@
 
 	<PropertyGroup>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
